--- a/site/public/index.html
+++ b/site/public/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style-inicio.css">
+    <title>Outer Wilds - Início</title>
 </head>
 <body>
-    Olá mundo!
+    <header>
+        <nav>
+            <div class="navbar">
+                <div id="simbolo1">
+                    <img class="simbolo" src="img/Inicio/simbolo.svg" alt="simbolo">
+                </div>
+                <div class="mobile-menu" class= "justify-content-center">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
+                <ul class="nav-list">
+                    <li><a  href="/">INÍCIO</a></li>
+                    <li>
+                        <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">HISTÓRIA</a>
+                        <ul class="dropdown-menu">
+                            <li> <a class="dropdown-item"  href="#">VIAJANTES</a></li>
+                            <li> <a class="dropdown-item"  href="#">PLANETAS</a></li>
+                            <li> <a class="dropdown-item"  href="#">DLC</a></li>
+                        </ul>
+                    
+                    </li>
+                    <li><a href="/">CONTATO</a></li>
+                    <li><a href="/">LOGIN</a></li>
+                </ul>
+            </div>
+        </nav>
+
+    </header>
+    <script src="js/inicio.js"></script>
+    <div class="logo">
+        <img src="img/Inicio/logo-raster-outer-wilds-1.svg" alt="Logo">
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
