--- a/site/public/index.html
+++ b/site/public/index.html
@@ -21,14 +21,13 @@
                 </div>
                 <ul class="nav-list">
                     <li><a  href="/">INÍCIO</a></li>
-                    <li>
+                    <li class="nav-item dropdown">
                         <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">HISTÓRIA</a>
                         <ul class="dropdown-menu">
                             <li> <a class="dropdown-item"  href="#">VIAJANTES</a></li>
                             <li> <a class="dropdown-item"  href="#">PLANETAS</a></li>
                             <li> <a class="dropdown-item"  href="#">DLC</a></li>
                         </ul>
-                    
                     </li>
                     <li><a href="/">CONTATO</a></li>
                     <li><a href="/">LOGIN</a></li>
