Corpo do site 1.1

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -34,12 +34,47 @@
                 </ul>
             </div>
         </nav>
-
+        <div class="logo">
+            <img src="img/Inicio/logo-raster-outer-wilds-1.svg" alt="Logo">
+        </div>
+        <div>
+            <img class="fundo" src="img/Inicio/background2.svg" alt="">
+        </div>
     </header>
+    <section class="container">
+        <div>
+            <h1>EXPLORE UM SISTEMA SOLAR COMPLETO!</h1>
+        </div>
+    <br>
+        <div class="texto-video">
+            <iframe width="900" height="515" src="https://www.youtube.com/embed/uXptkBQ8cGE?si=CRBtLutHs-Jw6cFB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div>
+                <p>Bem-vindo ao Programa Espacial! 🚀 Você é o mais novo membro da  Outer Wilds Ventures, um programa espacial incipiente que procura  respostas em um sistema solar estranho e em constante mudança.</p>
+                <p>Quem construiu as ruínas na Lua? O que se esconde no coração de Dark  Bramble? Por que você está preso em um loop de tempo, e pode ser  interrompido?</p>
+                <p>Para resolver esses mistérios, você terá que se aventurar  nos confins mais perigosos do espaço!</p>
+            </div>
+        </div>
+        <div>
+            <p class="texto-2">Vencedor de Melhor Jogo no BAFTA Games Awards de 2020 e nomeado Jogo do Ano de 2019 pela Giant Bomb, Polygon, Eurogamer e The Guardian, Outer Wilds é um mistério de mundo aberto aclamado pela crítica e premiado sobre um sistema solar preso em um loop de tempo sem fim.</p>
+        </div>
+    <br>
+        <div id="imagem-1">
+            <div class="premios">
+                <img  src="img/Inicio/outerwildsawards 1.svg" alt="Imagem dos premios" width="680px" height="200">
+            </div>
+            <div class="astronauta"> 
+            <img src="img/Inicio/imagem-inicio.svg" alt="Imagem de um personagem do jogo" width="500px">
+            </div>
+
+        </div>
+
+
+    </section>
+
     <script src="js/inicio.js"></script>
-    <div class="logo">
-        <img src="img/Inicio/logo-raster-outer-wilds-1.svg" alt="Logo">
-    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
