Criação do rodapé

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="navbar">
-                <div id="simbolo1">
+                <div class="simbolo1">
                     <img class="simbolo" src="img/Inicio/simbolo.svg" alt="simbolo">
                 </div>
                 <div class="mobile-menu" class= "justify-content-center">
@@ -59,20 +59,24 @@
         </div>
     <br>
         <div id="imagem-1">
-            <div class="premios">
+            <div class="premios-lojas">
                 <img  src="img/Inicio/outerwildsawards 1.svg" alt="Imagem dos premios" width="680px" height="200">
+                        <p class="lojasTexto">DISPONÍVEL AGORA EM:</p>
+                <img class="lojas" src="img/Inicio/lojas.svg" width="680px" alt="Lojas onde o jogo esta diponivel para compra">
             </div>
             <div class="astronauta"> 
             <img src="img/Inicio/imagem-inicio.svg" alt="Imagem de um personagem do jogo" width="500px">
             </div>
-
         </div>
-
-
     </section>
-
+    <footer>
+        <hr>
+        <p class="redes">Siga-nos em</p>
+        <img class="redesSociais" src="img/Inicio/redesSociais.svg" width="100px" alt="Redes Sociais">
+        <br><br>
+        <p class="politica" href="#">Politica de Privacidade</p>
+    </footer>
     <script src="js/inicio.js"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
