--- a/site/public/index.html
+++ b/site/public/index.html
@@ -11,10 +11,10 @@
     <header>
         <nav>
             <div class="navbar">
-                <div class="simbolo1">
+                <a href="#" class="simbolo1">
                     <img class="simbolo" src="img/Inicio/simbolo.svg" alt="simbolo">
-                </div>
-                <div class="mobile-menu" class= "justify-content-center">
+                </a>
+                <div class="mobile-menu" class="justify-content-center">
                     <div class="line1"></div>
                     <div class="line2"></div>
                     <div class="line3"></div>
@@ -61,8 +61,8 @@
         <div id="imagem-1">
             <div class="premios-lojas">
                 <img  src="img/Inicio/outerwildsawards 1.svg" alt="Imagem dos premios" width="680px" height="200">
-                        <p class="lojasTexto">DISPONÍVEL AGORA EM:</p>
-                <img class="lojas" src="img/Inicio/lojas.svg" width="680px" alt="Lojas onde o jogo esta diponivel para compra">
+                <p class="lojasTexto">DISPONÍVEL AGORA EM:</p>
+                <img class="lojas" src="img/Inicio/lojas.svg" width="680px" alt="Lojas onde o jogo esta diponivel para compra">                
             </div>
             <div class="astronauta"> 
             <img src="img/Inicio/imagem-inicio.svg" alt="Imagem de um personagem do jogo" width="500px">
@@ -72,9 +72,13 @@
     <footer>
         <hr>
         <p class="redes">Siga-nos em</p>
-        <img class="redesSociais" src="img/Inicio/redesSociais.svg" width="100px" alt="Redes Sociais">
+        <a href="#">        
+            <img class="redesSociais" src="img/Inicio/redesSociais.svg" width="100px" alt="Redes Sociais">
+        </a>
         <br><br>
-        <p class="politica" href="#">Politica de Privacidade</p>
+        <a href="#">
+            <p class="politica" href="#">Politica de Privacidade</p>
+        </a>
     </footer>
     <script src="js/inicio.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
