--- a/site/public/index.html
+++ b/site/public/index.html
@@ -30,7 +30,7 @@
                         </ul>
                     </li>
                     <li><a href="/">CONTATO</a></li>
-                    <li><a href="/">LOGIN</a></li>
+                    <li><a href="html/login.html">LOGIN</a></li>
                 </ul>
             </div>
         </nav>
