Pagina de registro

--- a/site/public/html/login.html
+++ b/site/public/html/login.html
@@ -1,16 +1,23 @@
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style-login.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Login</title>
+    <title>Outer Wilds - Login</title>
 </head>
 
 <body>
     <div class="login">
         <form action="">
-            <h1>LOGIN</h1>
+            <div class="container">
+
+                <a href="../index.html">
+                    <img class="voltar" src="../img/Login - Cadastro/polygon.svg" alt="Botão de voltar">
+                </a>
+                <h1>LOGIN</h1>
+            </div>
             <div class="email-senha">
                 <input type="email" placeholder="Email" required>
                 <i class='bx bxs-envelope'></i>
@@ -28,11 +35,9 @@
             <button type="submit" class="btn">ENTRAR</button>
 
             <div class="link-registro">
-                <p>Ainda não possui uma conta? <a href="#">Cadastrar-se</a></p>
+                <p>Ainda não possui uma conta? <a href="cadastro.html">Cadastrar-se</a></p>
             </div>
         </form>
-
     </div>
-
 </body>
 </html>
