--- a/site/public/index.html
+++ b/site/public/index.html
@@ -24,9 +24,9 @@
                     <li class="nav-item dropdown">
                         <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">HISTÓRIA</a>
                         <ul class="dropdown-menu">
-                            <li> <a class="dropdown-item"  href="#">VIAJANTES</a></li>
-                            <li> <a class="dropdown-item"  href="#">PLANETAS</a></li>
-                            <li> <a class="dropdown-item"  href="#">DLC</a></li>
+                            <li> <a class="lista-paginas"  href="#">VIAJANTES</a></li>
+                            <li> <a class="lista-paginas"  href="#">PLANETAS</a></li>
+                            <li> <a class="lista-paginas"  href="#">DLC</a></li>
                         </ul>
                     </li>
                     <li><a href="/">CONTATO</a></li>
