Pagina de registro 1.2

--- a/site/public/html/cadastro.html
+++ b/site/public/html/cadastro.html
@@ -11,11 +11,17 @@
 
     <div class="registro">
         <form action="">
+
+            <div class="container">
+                <a href="../index.html">
+                    <img class="voltar" src="../img/Login - Cadastro/polygon.svg" alt="Botão de voltar">
+                </a>
             <h1>CRIE SUA CONTA</h1>
+            </div>
 
             <div class="cadastro">
                 <div class="informacoes-cadastro">
-                    <input type="text" placeholder="Username" required>
+                    <input type="text" placeholder="Nick" required>
                     <i class='bx bxs-user'></i>
                 </div>
                 <div class="informacoes-cadastro">
@@ -32,9 +38,16 @@
                 </div>
             </div>
 
-            <label><input type="checkbox">Eu concordo com os <a href="">Termos de Serviço</a> e com as<a href=""> Políticas de Privacidade</a></label>
+            <div class="caixa-termos">
+                <label><input type="checkbox">Estou de acordo com os <a href="">Termos de uso</a></label>
+            </div>
 
             <button type="submit" class="btn">CRIAR CONTA</button>
+
+            <div class="link-login">
+                <p>Ja possui uma conta? <a href="login.html">Entrar</a></p>
+            </div>
+
         </form>
     </div>
 </body>
