--- a/site/public/index.html
+++ b/site/public/index.html
@@ -20,7 +20,7 @@
                     <div class="line3"></div>
                 </div>
                 <ul class="nav-list">
-                    <li><a  href="/">INÍCIO</a></li>
+                    <li><a  href="index.html">INÍCIO</a></li>
                     <li class="nav-item dropdown">
                         <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">HISTÓRIA</a>
                         <ul class="dropdown-menu">
