--- a/site/public/index.html
+++ b/site/public/index.html
@@ -11,14 +11,9 @@
     <header>
         <nav>
             <div class="navbar">
-                <a href="#" class="simbolo1">
+                <a href="html/quiz.html" class="simbolo1">
                     <img class="simbolo" src="img/Inicio/simbolo.svg" alt="simbolo">
                 </a>
-                <div class="mobile-menu" class="justify-content-center">
-                    <div class="line1"></div>
-                    <div class="line2"></div>
-                    <div class="line3"></div>
-                </div>
                 <ul class="nav-list">
                     <li><a  href="index.html">INÍCIO</a></li>
                     <li class="nav-item dropdown">
@@ -80,7 +75,6 @@
             <p class="politica" href="#">Politica de Privacidade</p>
         </a>
     </footer>
-    <script src="js/inicio.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
