Estrutura do Quiz

--- a/site/public/html/quiz.html
+++ b/site/public/html/quiz.html
@@ -30,7 +30,32 @@
             </div>
         </nav>
     </header>
+    <section>
+        <div class="quiz">
+    
+                <div class="container">
+                    <h1>QUIZ</h1>
+                </div>
+                
+                <div class="texto-quiz">
+                    <p>Mostre que você é fan de Outer Wilds e tente acertar as perguntas desse quiz!</p>
+                </div>
 
+                <button type="submit" class="btn">COMEÇAR</button>
+
+    </section>
+
+    <footer>
+        <hr>
+        <p class="redes">Siga-nos em</p>
+        <a href="#">        
+            <img class="redesSociais" src="../img/Quiz/redesSociais.svg" width="100px" alt="Redes Sociais">
+        </a>
+        <br><br>
+        <a href="#">
+            <p class="politica" href="#">Politica de Privacidade</p>
+        </a>
+    </footer>
 
 
 
