--- a/site/public/html/quiz2.html
+++ b/site/public/html/quiz2.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style-quiz.css">
+    <link rel="stylesheet" href="../css/style-quiz2.css">
     <title>Outer Wilds - Quiz</title>
 </head>
 <body>
     <header>
         <nav>
             <div class="navbar">
-                <a href="#" class="simbolo1">
+                <a href="../html/quiz.html" class="simbolo1">
                     <img class="simbolo" src="../img/Quiz/simbolo-quiz.svg" alt="simbolo">
                 </a>
                 <ul class="nav-list">
@@ -30,22 +30,30 @@
             </div>
         </nav>
     </header>
+
     <section>
-
         <div class="quiz">
-            <div class="titulo">
-                 <h1>QUIZ</h1>
-            </div>
-                
-            <div class="texto-quiz">
-                <p>Mostre que você é fan de Outer Wilds e tente acertar as perguntas desse quiz!</p>
+            <h1 class="titulo">QUIZ</h1>
+
+            <div class="content">
+                <span class="spnQtd"></span>
+                <span class="question"></span>
+                <div class="answers"></div>
             </div>
 
-            <a href="quiz2.html">
-                <button type="submit" class="btn">COMEÇAR</button>
-            </a>
+            <div class="finish">
+                <span></span>
+                <button>Reiniciar</button>
+            </div>
         </div>
     </section>
+
+
+
+
+
+
+
 
     <footer>
         <hr>
@@ -64,7 +72,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="../js/digitação-quiz.js"></script>
+
     <script src="../js/quiz/script-quiz.js" type="module"></script>
 </body>
 </html>
