--- a/site/public/html/dashboard.html
+++ b/site/public/html/dashboard.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style-quiz.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.umd.min.js"></script>
+    <link rel="stylesheet" href="../css/style-dashboard.css">
     <title>Outer Wilds - Quiz</title>
 </head>
+
 <body>
     <header>
         <nav>
             <div class="navbar">
-                <a href="#" class="simbolo1">
+                <a href="../html/quiz.html" class="simbolo1">
                     <img class="simbolo" src="../img/Quiz/simbolo-quiz.svg" alt="simbolo">
                 </a>
                 <ul class="nav-list">
@@ -32,18 +34,16 @@
     </header>
 
     <section>
-        <div class="quiz">
-            <div class="titulo">
-                 <h1>QUIZ</h1>
-            </div>
-                
-            <div class="texto-quiz">
-                <p>Mostre que você é fan de Outer Wilds e tente acertar as perguntas desse quiz!</p>
+        <div class="conteudo-dashboard">
+            <div class="dashboard">
+                <canvas class="estilo-grafico" id="grafico"></canvas>
             </div>
 
-            <a href="quiz2.html">
-                <button type="submit" class="btn">COMEÇAR</button>
-            </a>
+            <div>
+                <a href="quiz.html">
+                    <button type="submit" class="btn">VOLTAR</button>
+                </a>
+            </div>
         </div>
     </section>
 
@@ -60,8 +60,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="../js/digitação-quiz.js"></script>
-    <script src="../js/quiz/script-quiz.js" type="module"></script>
-    
+    <script src="../js/dashboard.js" type="module"></script>
+
 </body>
 </html>
