--- a/site/public/html/quiz2.html
+++ b/site/public/html/quiz2.html
@@ -43,17 +43,17 @@
 
             <div class="finish">
                 <span></span>
-                <button>Reiniciar</button>
+                <a href="">
+                    <button>REINICIAR</button>
+                </a>
+
+                <a href="dashboard.html">
+                    <button>ESTATÍSTICA</button>
+                </a>
+                
             </div>
         </div>
     </section>
-
-
-
-
-
-
-
 
     <footer>
         <hr>
@@ -66,10 +66,6 @@
             <p class="politica" href="#">Politica de Privacidade</p>
         </a>
     </footer>
-
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
