--- a/site/public/html/dashboard.html
+++ b/site/public/html/dashboard.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.umd.min.js"></script>
     <link rel="stylesheet" href="../css/style-dashboard.css">
-    <title>Outer Wilds - Quiz</title>
+    <title>Outer Wilds - Estatística</title>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
                             <li> <a class="lista-paginas"  href="#">DLC</a></li>
                         </ul>
                     </li>
-                    <li><a href="/">CONTATO</a></li>
+                    <li><a href="../html/contato.html">CONTATO</a></li>
                     <li><a href="../html/login.html">LOGIN</a></li>
                 </ul>
             </div>
