--- a/site/public/index.html
+++ b/site/public/index.html
@@ -24,7 +24,7 @@
                             <li> <a class="lista-paginas"  href="#">DLC</a></li>
                         </ul>
                     </li>
-                    <li><a href="/">CONTATO</a></li>
+                    <li><a href="html/contato.html">CONTATO</a></li>
                     <li><a href="html/login.html">LOGIN</a></li>
                 </ul>
             </div>
