--- a/site/public/html/contato.html
+++ b/site/public/html/contato.html
@@ -21,7 +21,7 @@
                         <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">HISTÓRIA</a>
                         <ul class="dropdown-menu">
                             <li> <a class="lista-paginas"  href="#">VIAJANTES</a></li>
-                            <li> <a class="lista-paginas"  href="#">PLANETAS</a></li>
+                            <li> <a class="lista-paginas"  href="planetas.html">PLANETAS</a></li>
                             <li> <a class="lista-paginas"  href="#">DLC</a></li>
                         </ul>
                     </li>
