--- a/site/public/html/planetas.html
+++ b/site/public/html/planetas.html
@@ -21,9 +21,9 @@
                     <li class="nav-item dropdown">
                         <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">HISTÓRIA</a>
                         <ul class="dropdown-menu">
-                            <li> <a class="lista-paginas"  href="#">VIAJANTES</a></li>
-                            <li> <a class="lista-paginas"  href="#">PLANETAS</a></li>
-                            <li> <a class="lista-paginas"  href="#">DLC</a></li>
+                            <li> <a class="lista-paginas"  href="viajantes.html">VIAJANTES</a></li>
+                            <li> <a class="lista-paginas"  href="planetas.html">PLANETAS</a></li>
+                            <li> <a class="lista-paginas"  href="dlc.html">DLC</a></li>
                         </ul>
                     </li>
                     <li><a href="contato.html">CONTATO</a></li>
@@ -63,7 +63,7 @@
             <h1 class="titulo-planetas">VALE INCERTO</h1>
             <br>
             <p class="texto-planetas">Vale Incerto é o terceiro de seis planetas do sistema solar de Outer Wilds. De acordo com o seu nome, o planeta consiste numa crosta rochosa e frágil, rodeando um interior oco com um grande buraco negro que serve como núcleo do planeta. Os bombardeamentos regulares da lua do planeta fazem com que fragmentos da frágil crosta se quebrem ao longo do ciclo, caindo no núcleo do buraco negro.</p>
-            <p class="texto-planetas">O planeta é o lar de inúmeras estruturas Nomai espalhadas dentro e sob a crosta do planeta, incluindo a enorme Cidade Suspensa, a Torre do Conhecimento Quântico, o Observatório do Sul, um Canhão Gravitacional e a Forja do Buraco Negro usada pelos Nomai para criar a urdidura. núcleos para o Projeto Ash Twin.</p>
+            <p class="texto-planetas">O planeta é o lar de inúmeras estruturas Nomai espalhadas dentro e sob a crosta do planeta, incluindo a enorme Cidade Suspensa, a Torre do Conhecimento Quântico, o Observatório do Sul, um Canhão Gravitacional e a Forja do Buraco Negro usada pelos Nomai para criar os núcleos de dobra para o Projeto Gêmeo Cinzento.</p>
             <br><br>
             <p class="info-planetas">Tipo: Planeta</p>
             <p class="info-planetas">Habitantes: Riebeck</p>
