--- a/site/public/html/quiz.html
+++ b/site/public/html/quiz.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="navbar">
-                <a href="#" class="simbolo1">
+                <a href="quiz.html" class="simbolo1">
                     <img class="simbolo" src="../img/Quiz/simbolo-quiz.svg" alt="simbolo">
                 </a>
                 <ul class="nav-list">
@@ -19,9 +19,9 @@
                     <li class="nav-item dropdown">
                         <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">HISTÓRIA</a>
                         <ul class="dropdown-menu">
-                            <li> <a class="lista-paginas"  href="#">VIAJANTES</a></li>
+                            <li> <a class="lista-paginas"  href="viajantes.html">VIAJANTES</a></li>
                             <li> <a class="lista-paginas"  href="planetas.html">PLANETAS</a></li>
-                            <li> <a class="lista-paginas"  href="#">DLC</a></li>
+                            <li> <a class="lista-paginas"  href="dlc.html">DLC</a></li>
                         </ul>
                     </li>
                     <li><a href="../html/contato.html">CONTATO</a></li>
