--- a/site/public/index.html
+++ b/site/public/index.html
@@ -19,9 +19,9 @@
                     <li class="nav-item dropdown">
                         <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">HISTÓRIA</a>
                         <ul class="dropdown-menu">
-                            <li> <a class="lista-paginas"  href="#">VIAJANTES</a></li>
+                            <li> <a class="lista-paginas"  href="html/viajantes.html">VIAJANTES</a></li>
                             <li> <a class="lista-paginas"  href="html/planetas.html">PLANETAS</a></li>
-                            <li> <a class="lista-paginas"  href="#">DLC</a></li>
+                            <li> <a class="lista-paginas"  href="html/dlc.html">DLC</a></li>
                         </ul>
                     </li>
                     <li><a href="html/contato.html">CONTATO</a></li>
