--- a/site/public/html/contato.html
+++ b/site/public/html/contato.html
@@ -20,12 +20,12 @@
                     <li class="nav-item dropdown">
                         <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">HISTÓRIA</a>
                         <ul class="dropdown-menu">
-                            <li> <a class="lista-paginas"  href="#">VIAJANTES</a></li>
+                            <li> <a class="lista-paginas"  href="viajantes.html">VIAJANTES</a></li>
                             <li> <a class="lista-paginas"  href="planetas.html">PLANETAS</a></li>
-                            <li> <a class="lista-paginas"  href="#">DLC</a></li>
+                            <li> <a class="lista-paginas"  href="dlc.html">DLC</a></li>
                         </ul>
                     </li>
-                    <li><a href="../html/contato.html">CONTATO</a></li>
+                    <li><a href="contato.html">CONTATO</a></li>
                     <li><a href="../html/login.html">LOGIN</a></li>
                 </ul>
             </div>
