--- a/site/public/html/dlc.html
+++ b/site/public/html/dlc.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style-quiz2.css">
-    <title>Outer Wilds - Quiz</title>
+    <link rel="stylesheet" href="../css/style-dlc.css">
+    <title>Outer Wilds - DLC</title>
 </head>
 <body>
     <header>
         <nav>
             <div class="navbar">
-                <a href="../html/quiz.html" class="simbolo1">
-                    <img class="simbolo" src="../img/Quiz/simbolo-quiz.svg" alt="simbolo">
+                <a href="quiz.html" class="simbolo1">
+                    <img class="simbolo" src="../img/Inicio/simbolo.svg" alt="simbolo">
                 </a>
                 <ul class="nav-list">
                     <li><a  href="../index.html">INÍCIO</a></li>
@@ -24,51 +24,28 @@
                             <li> <a class="lista-paginas"  href="dlc.html">DLC</a></li>
                         </ul>
                     </li>
-                    <li><a href="../html/contato.html">CONTATO</a></li>
-                    <li><a href="../html/login.html">LOGIN</a></li>
+                    <li><a href="contato.html">CONTATO</a></li>
+                    <li><a href="login.html">LOGIN</a></li>
                 </ul>
             </div>
         </nav>
     </header>
-
-    <section>
-        <div class="quiz">
-            <h1 class="titulo">QUIZ</h1>
-
-            <div class="content">
-                <span class="spnQtd"></span>
-                <span class="question"></span>
-                <div class="answers"></div>
-            </div>
-
-            <div class="finish">
-                <span></span>
-                <a href="">
-                <button>REINICIAR</button>
-                </a>
-
-                <a href="dashboard.html">
-                    <button>ESTATÍSTICA</button>
-                </a>
-                
-            </div>
+    <section class="container">
+        <div class="titulo">
+            <h1>EM BREVE</h1>
         </div>
     </section>
-
     <footer>
         <hr>
         <p class="redes">Siga-nos em</p>
         <a href="#">        
-            <img class="redesSociais" src="../img/Quiz/redesSociais.svg" width="100px" alt="Redes Sociais">
+            <img class="redesSociais" src="../img/Inicio/redesSociais.svg" width="100px" alt="Redes Sociais">
         </a>
         <br><br>
         <a href="#">
             <p class="politica" href="#">Politica de Privacidade</p>
         </a>
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-    <script src="../js/quiz/script-quiz.js" type="module"></script>
 </body>
 </html>
