--- a/site/public/html/viajantes.html
+++ b/site/public/html/viajantes.html
@@ -128,6 +128,28 @@
     CAMPO COMENTARIOS
     </section>
 
+    <!-- Formulario de postagem-->
+    <main class="main">
+        <div class="newPost">
+            <div class="infoUser">
+                <div class="imgUser"></div>
+                <strong> GoldenN9</strong>
+            </div>
+            <form action="" class="formPost">
+                <textarea name="texarea" placeholder="Deixe um comentario!"></textarea>
+
+                <div class="iconsAndButton">
+                    <div class="icons">
+                        <button class="btnFileForm"><img src="../img/assets/img.svg" alt="Adicionar uma imagem"></button>
+                        <button class="btnFileForm"><img src="../img/assets/video.svg" alt="Adicionar uma video"></button>
+                    </div>
+
+                    <button type="submit" class="btnSubmitForm">Publicar</button>
+                </div>
+            </form>
+        </div>
+    </main>
+
     <footer>
         <hr>
         <p class="redes">Siga-nos em</p>
